src/components/ManfredChat.css
.manfred-container-outer {
  display: flex;
  justify-content: center;
}

.manfred-container-inner {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100vh;
  width: min(100%, 32em);
}

.messages-container {
  display: flex;
  flex-direction: column;
  max-height: 100%;
  overflow: scroll;
  margin-top: auto;
  width: 100%;
}

.message-input-container {
  width: 100%;
  padding-bottom: 0.5em;
}

.message-input {
  box-sizing: border-box;
  width: 100%;
  padding-left: 0.5em;
  padding-right: 0.5em;
  padding-top: 1em;
  padding-bottom: 1em;
  background-color: white;
  border-radius: 0.5em;
  border: 1px solid black;
}

